.k8s/with_ingress.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cluster-api-deployment
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cluster-api
  template:
    metadata:
      labels:
        app: cluster-api
    spec:
      containers:
      - name: cluster-api
        image: cluster:1.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        command: ["elixir"]
        args: [
          "--name", 
          "cluster@$(MY_POD_IP)", 
          "--cookie","$(ERLANG_COOKIE)", 
          "--no-halt", 
          "-S","mix",
          "phx.server"
        ]
---
kind: Service
apiVersion: v1

metadata:
  name: cluster-api-service
  namespace: default
spec:
  clusterIP: None
  selector:
    app: cluster-api
  ports:
      - name: http
        port: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cluster-api-service
            port:
              number: 4000
